--- a/PrismPluginPopupsProblem/PrismPluginPopupsProblem/PrismPluginPopupsProblem.csproj
+++ b/PrismPluginPopupsProblem/PrismPluginPopupsProblem/PrismPluginPopupsProblem.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="3.2.0.839982" />
+    <PackageReference Include="Prism.Plugin.Popups" Version="2.2.0.293" />
+    <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
     <PackageReference Include="Prism.DryIoc.Forms" Version="7.1.0.431" />
   </ItemGroup>
 
