--- a/PrismPluginPopupsProblem/PrismPluginPopupsProblem/PrismPluginPopupsProblem.csproj
+++ b/PrismPluginPopupsProblem/PrismPluginPopupsProblem/PrismPluginPopupsProblem.csproj
@@ -10,4 +10,13 @@
     <PackageReference Include="Prism.DryIoc.Forms" Version="7.1.0.431" />
   </ItemGroup>
 
+  <ItemGroup>
+    <EmbeddedResource Update="Views\PageA.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\Popup.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
